tests/ui/line_overflow/long_string_literal.rs
// rustfmt-max_width: 50
// rustfmt-error_on_line_overflow: true
// rustfmt-error_on_unformatted: true

fn main() {
    println!("This is a really really long string that triggers an overflow warning")
}
